# archive

dart/dijital-kitap/: README.md
dart/soru-takip/: README.md
dart/soru-takip/lib/: main.dart
dart/srs/: pubspec.yaml
dart/srs/lib/: main.dart
dart/vampire/: README.md
dotfiles-cipher/: OxOUBnEXJTiNqdjGJK8E6Q  P3LSBM2IGeeZObN7-k11ClQrdLwr1w4KrTzIRVbaRUA  dhZ3jGZYNNaXqnAc4whyag  gocryptfs.conf  gocryptfs.diriv  wPu308D19lhJzvPFTcP4aA
dotfiles-cipher/3uxkHrfVwmSRDcfWn-ppJA/: 4hyX16cHxYkpEMXD1db6Jw  CCFBFmZsXRLqfQw8mmqn9g  CygF56BstTlWjoW-Cqr9Eg  E2sWrh8_VuUlXp2IIu6jfg  Jatyev6lFAYQ8yEUV-ynJA  MnZBiEQ7MGlSfTy95Z1VDw  T0r2eMXzX5KfIbQxmTzsPg  bzndtplDJZt0-VTAScolKg  fA2Aw6LxfW9h62vbhgFAXA  gocryptfs.diriv  nlvQOTXSKRGEQQFpq6wLdQ  oyDEW_T_D7MFqoRr3fw0UQ  sgcR7zjT_1fpDobts2CBH316FFxpH8ESFeIwMdiO6h5BkDrDs5be2FSwK8SWYoPi  vAg0qU_SLcf3Sgclo6hIjA
dotfiles-cipher/EkFTo3KEOcQqycEBfElPHQ/: gocryptfs.diriv  zOQbre758zNMQ3XTL7vbGA
dotfiles-cipher/jZN_EAdF88vPbBX7-8EzPQ/: KPLLzCsYsgZwMK-FInKeFA  aAOxDlZNGhmWzikduS0jRA  bj0vPhL5x025cHVk_tfgRA  gocryptfs.diriv  pz1DQBMJdB5efDITE6Fc0rqMhh9P7nGN7P1PhZEMLsk  rX2hLzS71kfLl5edfa3G-Q
js/bootcamp-graduation-project/: package.json
js/bootcamp-todo_api/src/: App.tsx
python/aggregation/: main.py  pms.xlsx
python/proton-to-csv/: main.py
python/transactions/: main.py
rust/cache/: Cargo.toml
rust/something_like_aur/: Cargo.toml
rust/something_like_aur/src/: aur.rs  main.rs
rust/the-book-tui/: .gitignore  Cargo.toml  README.md
rust/the-book-tui/src/: book.rs  main.rs
rust/tui_view/: Cargo.toml  README.md
(+122 files in other folders)
