[package]
name = "the-book-tui"
version = "1.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A TUI application to load, read, and search The Rust Book."
readme = "README.md"
keywords = ["cli", "tui", "book"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = "0.17.3"
reqwest = { version = "0.11.14", features = ["json", "blocking"] }
serde = { version = "1.0.156", features = ["derive"] }
serde_json = { version = "1.0.94", features = ["std"] }
tui = "0.19"
crossterm = "0.25"
better-panic = "0.3.0"
home = "0.5.4"
itertools = "0.10.5"
clap = {version = "4.1.11", features = ["derive"]}
